# ve

./: AUTHORS  Doxyfile  Makefile.in  benchmark.vcproj  capture.vcproj  config.h  configure  configure.in  libtool  ve.kdevelop  ve.sln  ve.vcproj
config/: cam1.fmt  cam2.fmt  cam3.fmt  camSubS.fmt  caminit.txt  configuration.xml  logger.properties
doc/: Readme.html  Usage.html
doc/classdoc/: README
doc/uml/: README  arear.zuml  ve.zuml
src/: Makefile  Makefile.am  Makefile.in  arregistration.cpp  arregistration.h  benchmark.cpp  benchmark.h  benchmark_main.cpp  bmpstruct.h  buffersource.cpp  buffersource.h  calibrationoverlay.cpp  calibrationoverlay.h  cameracalibration.cpp  cameracalibration.h  capture_main.cpp  capturebuffer.cpp  capturebuffer.h  capturecontroller.cpp  capturecontroller.h  captureimagepair.cpp  captureimagepair.h  captureinfo.h  capturereadthread.cpp  capturereadthread.h  capturewritethread.cpp  capturewritethread.h  commandlineparser.cpp  commandlineparser.h  corbacontroller.cpp  corbacontroller.h  corbapositiontracker.cpp  corbapositiontracker.h  corbathread.cpp  corbathread.h  dummyoverlay.cpp  dummyoverlay.h  dummysource.cpp  dummysource.h  epixcameracontroller.cpp  (+62 more)
src/corbatest/: Makefile.am  Makefile.in  main.cpp
src/stubs/: Makefile.am  Makefile.in  positionconnector.idl  positionconnector_impl.cpp  positionconnector_impl.h
templates/: h
